[gd_scene load_steps=12 format=2]

[ext_resource path="res://Bodies/Mini_Skeleton/Mini_Skeleton.gd" type="Script" id=1]
[ext_resource path="res://Bodies/Mini_Skeleton/Sprites/01.png" type="Texture" id=2]
[ext_resource path="res://Bodies/Mini_Skeleton/Sprites/02.png" type="Texture" id=3]
[ext_resource path="res://Bodies/Mini_Skeleton/Sprites/03.png" type="Texture" id=4]
[ext_resource path="res://Bodies/Mini_Skeleton/Sprites/04.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Move",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.2388, 24.2151 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.8976, 24.5528 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.36266, 18.173 )

[sub_resource type="Animation" id=4]
resource_name = "Dead_Left"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Dead_Right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="Mini_Skeleton" type="KinematicBody2D"]
z_index = 6
z_as_relative = false
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "Move"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.61681, -0.157776 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 103.617, 0.0668526 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Enemy",
]]
editor/display_folded = true
collision_layer = 0
collision_mask = 82

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.56845, -0.157778 )
shape = SubResource( 3 )

[node name="Area_Attack" type="Area2D" parent="." groups=[
"Attack_Enemy",
]]
editor/display_folded = true
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Attack"]
position = Vector2( 1.03132, 5.73781 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead_Left = SubResource( 4 )
anims/Dead_Right = SubResource( 5 )

[node name="RayCastReact" type="RayCast2D" parent="."]
position = Vector2( 0, -13 )
enabled = true
cast_to = Vector2( 300, 0 )
collision_mask = 3

[node name="RayCastJump" type="RayCast2D" parent="."]
position = Vector2( 0, -19.941 )
enabled = true
cast_to = Vector2( 70, 0 )

[node name="RayCastJump2" type="RayCast2D" parent="."]
position = Vector2( 0, -11.62 )
enabled = true
cast_to = Vector2( 70, 0 )

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2( 23, 21.846 )
enabled = true
cast_to = Vector2( 0, 80 )

[node name="Timer_Queue" type="Timer" parent="." groups=[
"Timer",
]]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer_Queue" to="." method="_on_Timer_Queue_timeout"]
